force-app/main/default/objects/Experience_catalogue__c/Experience_catalogue__c.object-meta.xml
<CustomObject>
    <label>Experience catalogue</label>
    <nameField>
        <label>Experience catalogue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Experience catalogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>