force-app/main/default/objects/Experience_catalogue__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Request_Type</valueSetName>
    </valueSet>
</CustomField>